# swagger.json
@@ -1986,7 +1986,7 @@
         ]
       }
     },
-    "/analysis": {
+    "/analysis/user": {
       "get": {
         "operationId": "AnalysisController_getAnalysisForUser",
         "parameters": [
@@ -2004,6 +2004,46 @@
             "in": "query",
             "schema": {
               "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Analysis"
+        ],
+        "security": [
+          {
+            "JWT-auth": []
+          }
+        ]
+      }
+    },
+    "/analysis": {
+      "get": {
+        "operationId": "AnalysisController_getAnalysis",
+        "parameters": [
+          {
+            "name": "start",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "format": "date-time",
+              "example": "2021-01-01",
+              "type": "string"
+            }
+          },
+          {
+            "name": "end",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "format": "date-time",
+              "example": "2021-01-31",
+              "type": "string"
             }
           }
         ],
